js <element>, ++> Dialog, --> dispatch

--- a/www/builder/sources/ui/Tabs/Tabs.css
+++ b/www/builder/sources/ui/Tabs/Tabs.css
@@ -1,3 +1,23 @@
+$imgsrc = ../images/ui
+
 .app-tabs {
-	$(inb mb5 bo#5f79ab br6)
+	$(inb mb5 bo#5f79ab br6 lh22)
+}
+.app-tabs-item {
+	$(rel inb c#7a869e p3_27_5_16 pointer)
+}
+.app-tabs-item.active {
+	$(bc#5f79ab br3 c#fff)
+}
+.app-tabs-remove {
+	$(abs wh15 br50% bc#7f8aa6 r4 t4 bg png=tabclose)
+}
+.app-tabs-remove:hover {
+	$bc#5a6786
+}
+.app-tabs-item.active .app-tabs-remove {
+	$bc#1a274a
+}
+.app-tabs-item.active .app-tabs-remove:hover {
+	$bc#99b0ef
 }
