--- a/www/builder/sources/components/SearchForm/controls/keywords/Keywords.css
+++ b/www/builder/sources/components/SearchForm/controls/keywords/Keywords.css
@@ -81,6 +81,6 @@ $imgsrc = ../images/searchform
 .app-tags-top-buttons-item:nth-child(2) span:hover {
 	$c#6c3a3a
 }
-.app-keywords-area .app-tabs {
+.app-search-form-panel.keywords-panel .app-tabs {
 	$mt4
 }
