--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -96,7 +96,7 @@
 .app-tags-top-buttons-item:nth-child(2){padding-left:14px;border-left:1px solid #cfd5e1;padding-right:3px;}
 .app-tags-top-buttons-item:nth-child(2) span{cursor:pointer;color:#a66666;}
 .app-tags-top-buttons-item:nth-child(2) span:hover{color:#6c3a3a;}
-.app-keywords-area .app-tabs{margin-top:4px;}
+.app-search-form-panel.keywords-panel .app-tabs{margin-top:4px;}
 /* SearchFormCreateFilterMenu */
 .app-popup-menu-outer-container.create-filters-menu .app-popup-menu-inner-container{border:none;}
 .app-popup-menu-outer-container.create-filters-menu{margin-top:3px;-webkit-box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);-moz-box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);border:none;width:278px;}
@@ -267,7 +267,13 @@ body.main-page .app-top-menu-inner{width:1350px;margin:auto;}
 .app-tab.app-tab-rest{width:auto;padding:0 20px;z-index:1;visibility:hidden;}
 .app-tab.app-tab-rest.shown{visibility:visible;}
 /* Tabs */
-.app-tabs{display:inline-block;margin-bottom:5px;border:1px solid #5f79ab;border-radius:6px;}
+.app-tabs{display:inline-block;margin-bottom:5px;border:1px solid #5f79ab;border-radius:6px;line-height:22px;}
+.app-tabs-item{position:relative;display:inline-block;color:#7a869e;padding:3px 27px 5px 16px;cursor:pointer;}
+.app-tabs-item.active{background-color:#5f79ab;border-radius:3px;color:#fff;}
+.app-tabs-remove{position:absolute;width:15px;height:15px;border-radius:50%;background-color:#7f8aa6;right:4px;top:4px;background-position:center center;background-repeat:no-repeat;background-image:url(../images/ui/tabclose.png);}
+.app-tabs-remove:hover{background-color:#5a6786;}
+.app-tabs-item.active .app-tabs-remove{background-color:#1a274a;}
+.app-tabs-item.active .app-tabs-remove:hover{background-color:#99b0ef;}
 /* Tooltip */
 .app-tooltip{width:18px;height:18px;background-color:#C1C6D6;line-height:17px;display:inline-block;border-radius:50%;cursor:pointer;font-family:ptsansbold;text-align:center;box-sizing:border-box;color:#fff;}
 .app-tooltip:before{content:'!';}
