--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -91,12 +91,17 @@
 .app-keywords-area .app-tags-content{top:75px;}
 .app-tags-top{height:16px;white-space:nowrap;padding:2px 0 2px 0;}
 .app-tags-top-buttons{float:right;font-size:12px;}
+.app-keywords-right:not(.switched) .app-tags-top-buttons{display:none;}
 .app-tags-top-buttons-item{display:inline-block;height:18px;line-height:18px;}
 .app-tags-top-buttons-item:first-child{color:#5f6b7f;padding-right:12px;}
 .app-tags-top-buttons-item:nth-child(2){padding-left:14px;border-left:1px solid #cfd5e1;padding-right:3px;}
 .app-tags-top-buttons-item:nth-child(2) span{cursor:pointer;color:#a66666;}
 .app-tags-top-buttons-item:nth-child(2) span:hover{color:#6c3a3a;}
 .app-search-form-panel.keywords-panel .app-tabs{margin-top:4px;}
+.app-keywords-index{color:#a1a1a1;font-size:14px;font-family:ptsans;display:none;margin-left:10px;}
+.app-keywords-area.multi .app-keywords-index{display:inline-block;}
+.app-keywords-remove-request{cursor:pointer;color:#a66666;display:inline-block;margin-left:10px;font-size:12px;}
+.app-keywords-remove-request:hover{color:#6c3a3a;}
 /* SearchFormCreateFilterMenu */
 .app-popup-menu-outer-container.create-filters-menu .app-popup-menu-inner-container{border:none;}
 .app-popup-menu-outer-container.create-filters-menu{margin-top:3px;-webkit-box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);-moz-box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);box-shadow:0 5px 14px 0 rgba(0,0,0,0.75);border:none;width:278px;}
@@ -154,7 +159,8 @@
 /* Tags */
 .app-tags-container{position:relative;margin-bottom:6px;background-color:#f3f5f7;padding:5px;color:#666;font-size:13px;border:1px solid #dde5f3;border-radius:2px;min-height:182px;max-height:182px;height:182px;box-shadow:1px 1px 6px #f0f4f7;}
 .app-tags-content{position:absolute;top:56px;left:0;right:0;bottom:0;padding:0 4px;overflow:hidden;border-radius:0 0 2px 2px;}
-.app-tags-item{max-width:260px;color:#38986a;background-color:#E8F3E7;border:1px solid #38986a;cursor:pointer;border-radius:3px;padding-left:10px;padding-right:30px;margin:2px;display:block;float:left;position:relative;box-sizing:border-box;height:28px;line-height:26px;font-family:segoesemibold;}
+.app-tags-item{max-width:260px;color:#38986a;background-color:#E8F3E7;border:1px solid #38986a;cursor:pointer;border-radius:3px;padding-right:30px;margin:2px;display:block;float:left;position:relative;box-sizing:border-box;height:28px;line-height:26px;}
+.app-tags-item-text{display:inline-block;max-width:225px;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-family:segoesemibold;padding-left:10px;}
 .app-tags-remove{background-image:url(../images/ui/tagsclearg.png);cursor:pointer;position:absolute;right:7px;top:6px;display:block;background-position:center center;background-repeat:no-repeat;width:15px;height:15px;opacity:0.7;}
 .app-tags-remove:hover{opacity:1;}
 /* CalendarFavorites */
@@ -214,8 +220,11 @@ body.main-page .app-top-menu-inner{width:1350px;margin:auto;}
 .app-autocomplete{position:relative;}
 .app-autocomplete .add{position:absolute;top:50%;margin-top:-16px;right:5px;width:86px;line-height:33px;z-index:10;}
 .app-autocomplete .add:after{content:'';position:absolute;left:-22px;top:50%;width:22px;height:22px;margin-top:-11px;background-image:url(../images/ui/enter.png);background-position:center center;background-repeat:no-repeat;background-color:#fff;}
-.app-autocomplete-variants{position:absolute;}
-.app-autocomplete-variants:empty{display:none;}
+.app-autocomplete-variants{position:absolute;top:100%;margin-top:2px;left:0;right:0;padding:5px;padding-right:0;background-color:#fff;border-radius:2px;box-shadow:1px 1px 6px #bec9d4;box-sizing:border-box;z-index:100;border:1px solid #788097;display:none;}
+.app-autocomplete-variants.shown{display:block;}
+.app-autocomplete-variants-inner{max-height:290px;overflow:auto;position:relative;z-index:2;padding-right:5px;}
+.app-autocomplete-variant{display:block;position:relative;padding:6px 8px;line-height:16px;cursor:pointer;white-space:nowrap;color:#515a71;border-radius:3px;}
+.app-autocomplete-variant:hover{color:#fff;background-color:#687da3;}
 /* Calendar */
 .app-calendar{border-radius:3px;margin-top:4px;border:1px solid #e4eaf3;font-size:14px;box-shadow:0 0 6px #dde4ef;}
 .app-calendar-header{position:relative;background-color:#f5f8fc;height:42px;border-radius:3px;border-bottom:1px solid #d6e1f0;}
@@ -250,6 +259,10 @@ body.main-page .app-top-menu-inner{width:1350px;margin:auto;}
 .app-dialog-expand{right:20px;background-image:url(../images/ui/expand-dialog.png);opacity:0.65;}
 .app-dialog.expanded .app-dialog-expand{background-image:url(../images/ui/minimize-dialog.png);}
 .app-dialog-expand:hover,.app-dialog-close:hover{opacity:1;}
+/* Editor */
+.app-editor-mask{position:fixed;z-index:900;left:0;right:0;top:0;bottom:0;background-color:#212D42;opacity:0.65;display:none;}
+.app-editor{position:absolute;margin-top:0;margin-left:0;background-color:#fff;padding:12px;width:380px;box-shadow:0 0 10px #383838;border-radius:3px;z-index:901;display:none;}
+.app-editor.shown,.app-editor-mask.shown{display:block;}
 /* PopupMenu */
 .app-popup-menu-outer-container{position:absolute;z-index:500;width:200px;margin-top:1px;text-align:left;top:100%;border-radius:3px;background-color:#fff;border-left:1px solid #6C7992;border-right:1px solid #6C7992;max-height:0;overflow:hidden;transition:all 0.2s;}
 .app-popup-menu-inner-container{position:absolute;left:0;right:0;bottom:0;border-top:1px solid #6C7992;border-bottom:1px solid #6C7992;background-color:#fff;border-radius:3px;padding:5px 0;}
