--- a/www/builder/sources/components/SearchForm/controls/keywords/Keywords.css
+++ b/www/builder/sources/components/SearchForm/controls/keywords/Keywords.css
@@ -43,20 +43,23 @@ $imgsrc = ../images/ui
 .app-keywords-left {
 	$(abs t l b r33% z2)
 }
-.app-keywords-left.switched {
+.app-keywords-block.switched .app-keywords-left {
 	$r68.5%
 }
 .app-keywords-right {
 	$(abs t l68.5% b r z1)	
 }
-.app-keywords-right.switched {
+.app-keywords-block.switched .app-keywords-right {
 	$l33%
 }
 .app-keywords-tags-title {
 	$(bold c#3B4452 fs16 lh16)
 }
 .app-keywords-area .app-tags-container {
-	$(abs mih0 nomaxh ha t22 l r b50%)
+	$(abs mih0 nomaxh ha t22 l r b)
+}
+.app-keywords-area .app-keywords-block.with-recommendations:not(.switched) .app-tags-container {
+	$b50%
 }
 .app-keywords-area .app-tags-content {
 	$t75
@@ -67,7 +70,8 @@ $imgsrc = ../images/ui
 .app-tags-top-buttons {
 	$(fright fs12)
 }
-.app-keywords-right:not(.switched) .app-tags-top-buttons {
+.app-keywords-block.switched .app-keywords-left .app-tags-top-buttons,
+.app-keywords-block:not(.switched) .app-keywords-right .app-tags-top-buttons {
 	$none
 }
 .app-tags-top-buttons-item {
@@ -101,8 +105,17 @@ $imgsrc = ../images/ui
 	$c#6c3a3a
 }
 .app-tags-select-button {
-	$(fs12 c#444c61 mr12 inb pointer png2=select-arrow-small norep pr12 bp100%_50% opac9 rel)
+	$(fs12 c#5f6b7f mr12 inb pointer png2=select-arrow-small norep pr12 bp100%_50% rel)
 }
 .app-tags-select-button:hover {
-	$(opac10)
+	$(c#444c61)
+}
+.app-keywords-block .app-recommendations {
+	$(abs l r-327 t50% b none)
+}
+.app-keywords-block.with-recommendations .app-recommendations {
+	$block
+}
+.app-keywords-block.switched .app-recommendations {
+	display: none !important;
 }
