--- a/www/builder/sources/controls/Tags/Tags.css
+++ b/www/builder/sources/controls/Tags/Tags.css
@@ -10,6 +10,9 @@ $imgsrc = ../images/ui
 .app-tags-item {
 	$(maw260 c#38986a bc#E8F3E7 bo#38986a pointer br3 pr30 m2 block fleft rel box h28 lh26)
 }
+.app-tags-item.optioned {
+	$(bc#8ebe8d boc#689a67 white tsh_1_1_1_#204029 bold)
+}
 .app-tags-item-text {
 	$(inb maw225 ovh nowrap ell semibold pl10)
 }
