--- a/www/builder/sources/views/Main/FilterSubscription/FilterSubscription.css
+++ b/www/builder/sources/views/Main/FilterSubscription/FilterSubscription.css
@@ -1,4 +1,4 @@
-.app-subscription:after {
+.app-subscription ==s {
 
 }
 .app-subscription-title {
@@ -13,47 +13,48 @@
 .app-subscription-head-subscribed {
 	$(fright bob#38986a_2 mr45)
 }
-.app-subscription-table {
+.app-subscription-table ==t {
 	$w100%
 }
-.app-subscription-table th {
+~t th {
     $(normal c#8b8e97 p10_0 fs14 center box bob#e4e4e4)
 }
-.app-subscription-table td {
+~t td {
 	$(vmid p6 bob#E0E6F3 lh14 box)
 }
-.app-subscription-table th:first-child,
-.app-subscription-table td:first-child {
+~t th:first-child,
+~t td:first-child {
 	$(left wa pl6)
 }
-.app-subscription-table th:nth-child(2),
-.app-subscription-table td:nth-child(2) {
+~t th:nth-child(2),
+~t td:nth-child(2) {
 	$w160
 }
-.app-subscription-table th:nth-child(3),
-.app-subscription-table td:nth-child(3) {
+~t th:nth-child(3),
+~t td:nth-child(3) {
 	$w180
 }
-.app-subscription-table th:nth-child(4),
-.app-subscription-table td:nth-child(4) {
+~t th:nth-child(4),
+~t td:nth-child(4) {
 	$(w30 pl0 pr0)
 }
-.app-subscription-table td:first-child span {
+~t td:first-child span {
 	$(c#384767 fs16 pointer)
 }
-.app-subscription-table td:first-child span:hover {
+~t td:first-child span:hover {
 	$c#6484ca
 }
-.app-subscription .subscr-button:after {
+
+~s .subscr-button:after {
     content: 'Подписаться';
 }
-.app-subscription .subscr-button.green-button:after {
+~s .subscr-button.green-button:after {
     content: 'Подписка оформлена';
 }
-.app-subscription .subscr-button.green-button:hover {
+~s .subscr-button.green-button:hover {
 	$bc#b65f5f
   	background-image: url(../images/buttons/red.png);
 }
-.app-subscription .subscr-button.green-button:hover:after {
+~s .subscr-button.green-button:hover:after {
     content: 'Отписаться';
 }
