--- a/www/builder/sources/ui/AutoComplete/AutoComplete.css
+++ b/www/builder/sources/ui/AutoComplete/AutoComplete.css
@@ -1,27 +1,27 @@
 $imgsrc = ../images/ui
 
-.app-autocomplete {
+.app-autocomplete ==a {
 	$(rel)
 }
-.app-autocomplete .add {
+~a .add {
 	$(abs t50% mt-16 r5 w86 lh33 z10)
 }
-.app-autocomplete .add:after {
+~a .add:after {
 	$(cnt abs l-22 t50% wh22 mt-11 png=enter bg bgwhite)
 }
-.app-autocomplete-variants {
+~a-variants ==v {
 	$(abs t100% mt2 l r p5 pr0 bgwhite br2 bsh_1_1_6_#bec9d4 box z100 bo#788097 none)
 }
-.app-autocomplete-variants.shown {
+~v.shown {
 	$block
 }
-.app-autocomplete-variants-inner {
+~v-inner {
 	$(mah290 ova rel z2 pr5)
 }
-.app-autocomplete-variant {
+.app-autocomplete-variant ==vv {
 	$(block rel p6_8 lh16 pointer nowrap c#515a71 br3)
 }
-.app-autocomplete-variant.active,
-.app-autocomplete-variant:hover {
+~vv.active,
+~vv:hover {
 	$(white bc#687da3)
 }
