--- a/www/builder/sources/views/Main/FilterSubscriptionOptions/FilterSubscriptionOptions.css
+++ b/www/builder/sources/views/Main/FilterSubscriptionOptions/FilterSubscriptionOptions.css
@@ -1,6 +1,6 @@
-.app-subscription-option {
+.app-subscription-option ==o {
 	$(mb12 br3 bo#E0E6F3 p10 pointer)
 }
-.app-subscription-option .app-ui-checkbox {
+~o .app-ui-checkbox {
 	$(mt2)
 }
