--- a/www/_____/css/styles.css
+++ b/www/_____/css/styles.css
@@ -19,6 +19,20 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+    font-family: 'museo_sans_cyrl300';
+    src: url('../fonts/museo_sans_cyrl_300.woff2') format('woff2'),
+         url('../fonts/museo_sans_cyrl_300.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'museo_sans_cyrl500';
+    src: url('../fonts/museosanscyrl_1.woff2') format('woff2'),
+         url('../fonts/museosanscyrl_1.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 
@@ -44,25 +58,25 @@ textarea, input[type="text"], input[type="password"], select {
 }
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-	color: #c5c7cb;
+	color: #959595;
 	transition: color 0.2s;
 	-moz-transition: color 0.2s;
 	-webkit-transition: color 0.2s;
 }
 input::-moz-placeholder,
 textarea::-moz-placeholder {
-	color: #c5c7cb;
+	color: #959595;
 	transition: color 0.2s;
 	-moz-transition: color 0.2s;
 	-webkit-transition: color 0.2s;
 }
 input:focus::-webkit-input-placeholder,
 textarea:focus::-webkit-input-placeholder {
-	color: #e1e3e7;
+	color: #ccc;
 }
 input:focus::-moz-placeholder,
 textarea:focus::-moz-placeholder {
-	color: #e1e3e7;
+	color: #ccc;
 }
 input:focus, textarea:focus {
 	outline: none;
@@ -147,103 +161,530 @@ label {
 	bottom: 0px;
 }
 
+body.fixed-header {
+	padding-top: 197px;
+}
 
 /* иряър */
 .header {
 	background-image: url(../images/blue.png);
 	background-color: #53afbd;
 }
-.header .block-inner {
-	height: 70px;
+.fixed-header .header {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 99;
 }
 .header .logo {
 	cursor: pointer;
+	display: none;
+	height: 70px;
 	position: absolute;
-	left: -15px;
-	top: 20px;
-	background-image: url(../images/logo.png);
-	width: 84px;
-	height: 60px;
+	left: 0;
+	top: 0;
+	background-image: url(../images/white-logo.png);
+	background-repeat: no-repeat;
+	background-position: 0 60%;
+	width: 126px;
 }
-.header .phone {
-	color: #000;
-	font-size: 20px;
-	position: absolute;
-	right: 200px;
-	top: 20px;
+.fixed-header .header .logo {
+	display: block;
 }
-.header .button {
-	position: absolute;
-	background-color: #fdbc42;
+
+
+.header .block-inner {
+	height: 70px;
+	line-height: 70px;
+}
+.header .fa {
+	color: #ffffff;
+	font-size: 18px;
+	margin-left: 18px;
+	cursor: pointer;
+}
+.header .fa:hover {
+	color: inherit;
+}
+.header .buttons {
+	float: right;
+}
+.header .buttons .button {
+	border: 2px solid #fff;
 	color: #fff;
 	cursor: pointer;
-	width: 170px;
-	height: 50px;
-	line-height: 50px;
+	width: 184px;
+	height: 40px;
+	font-size: 12px;
+	box-sizing: border-box;
+	line-height: 36px;
 	text-align: center;
 	border-radius: 3px;
-	right: 0;
-	top: 24px;
+	vertical-align: middle;
+	display: inline-block;
+	margin-left: 44px;
+	font-family: 'museo_sans_cyrl500';
 }
 .header .button:hover {
-	background-color: #ffd484;
+	border-color: #000;
+	color: #000;
 }
-.header .social {
-	position: absolute;
-	right: 200px;
-	top: 55px;
-}
-.header .social a {
-	display: block;
-	float: left;
-	width: 28px;
-	height: 19px;
-	background-position: 0% 0%;
-	background-repeat: no-repeat;
-	background-image: url(../images/social.png);
-}
-.header .social a:nth-child(1) {
-	margin-top: -1px;
-	width: 26px;
-}
-.header .social a:hover {
-	background-position: 0% 100%;
-}
-.header .social a:nth-child(2) {
-	background-position: -30px 0%;
-}
-.header .social a:nth-child(2):hover {
-	background-position: -30px 100%;
-}
-.header .social a:nth-child(3) {
-	background-position: -60px 0%;
-	margin-top: 1px;
-}
-.header .social a:nth-child(3):hover {
-	background-position: -60px 100%;
-}
-.header nav {
-	position: absolute;
-	left: 200px;
-	top: 45px;
-}
-.header nav a {
+.header .phone {
 	position: relative;
-	font-family: open_sansbold;
-	color: #dc2a00;
 	display: inline-block;
-	margin-right: 30px;
+	vertical-align: middle;
+	padding-left: 9px;
+	margin-left: 13px;
+	color: #fff;
+	font-size: 22px;
+	font-family: 'museo_sans_cyrl300';
 }
-.header nav a:hover {
-	color: #ff4317;
-}
-.header nav a.active:before {
+.header .phone:before {
 	content: '';
 	position: absolute;
-	top: -25px;
+	left: 0;
+	top: 50%;
+	height: 16px;
+	width: 1px;
+	margin-top: -8px;
+	background-color: #fff;
+}
+.nav-header  {
+	z-index: 10;
+}
+.fixed-header .nav-header {
+	position: fixed;
+	width: 100%;
+	top: 70px;
+	z-index: 99;
+	background-color: #e7e7e7;
+}
+.nav-header .nav-block {
+	height: 126px;
+	position: relative;
+	z-index: 3;
+}
+.fixed-header .nav-header .nav-block {
+	height: 42px;
+}
+.nav-header .fa {
+	display: none;
+	color: #5b5b5b;
+	font-size: 18px;
+	margin-left: 18px;
+	cursor: pointer;
+}
+.nav-header .fa:hover {
+	color: inherit;
+}
+.fixed-header .nav-header .fa {
+	display: inline-block;
+	line-height: 42px;
+	margin-left: 0;
+	margin-right: 16px;
+}
+.nav-header .logo {
+	cursor: pointer;
+	display: block;
+	height: 126px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background-image: url(../images/logo.png);
+	background-repeat: no-repeat;
+	background-position: 0 60%;
+	width: 248px;
+}
+.fixed-header .header .social,
+.fixed-header .header .header-text,
+.fixed-header .nav-header .logo {
+	display: none;
+}
+.nav-header .search-form {
+	position: absolute;
+	top: 0;
+	right: 94px;
+	height: 44px;
+	background-color: #e7e7e7;
+	width: 346px;
+}
+.fixed-header .nav-header .search-form {
+	visibility: hidden;
+}
+.nav-header .search-form input[type="text"] {
+	width: 100%;
+	padding: 13px;
+}
+.nav-header nav {
+	position: absolute;
+	left: 300px;
+	bottom: 0;
+	line-height: 66px;
+}
+.fixed-header .nav-header nav {
+	line-height: 42px;
+}
+.nav-header nav > div {
+	position: relative;
+	font-family: open_sansbold;
+	display: inline-block;
+	padding: 0 15px;
+}
+.nav-header nav > div:after {
+	content: '';
+	position: absolute;
+	top: 100%;
+	z-index: 4;
+	background-image: url(../images/arrow.png);
+	width: 24px;
+	height: 12px;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0.2s, opacity 0.2s;
 	left: 50%;
-	margin-left: -10px;
-	width: 20px;
-	height: 17px;
-	background-image: url(../images/mark.png);
+	margin-left: -12px;
+}
+.nav-header nav > div > a {
+	color: #5b5b5b;
+}
+.nav-header nav > div > span {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 285px;
+	background-color: #e6e6e6;
+	padding-top: 40px;
+	padding-bottom: 20px;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0.2s, opacity 0.2s;
+}
+.nav-header nav > div.with-submenu:hover:after,
+.nav-header nav > div:hover > span {
+	visibility: visible;
+	opacity: 1;
+}
+.nav-header nav > div > span:before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-image: url(../images/blue.png);
+	background-color: #53afbd;
+	top: 0;
+}
+.nav-header nav > div > span:after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 7px;
+	background-image: url(../images/blue.png);
+	background-color: #53afbd;
+	bottom: 0;
+}
+.nav-header nav > div > span.catalog-submenu {
+	width: 320px;
+}
+.nav-header nav > div > span > a {
+	display: block;
+	line-height: 20px;
+	padding: 4px 30px 4px 30px;
+	font-family: open_sansregular;
+	position: relative;
+}
+.nav-header nav > div > span > a:before {
+	content: '';
+	position: absolute;
+	left: 14px;
+	top: 11px;
+	width: 4px;
+	height: 4px;
+	border-radius: 50%;
+	background-image: url(../images/blue.png);
+	background-color: #53afbd;
+}
+.nav-header nav > div > a:hover {
+	color: #53afbd;
+}
+.nav-header nav > div > span > a:hover {
+	background-color: #dadada;
+}
+.nav-header nav > div:last-child {
+	padding-right: 0;
+}
+.nav-header .block-inner:after { 
+	content: '';
+	position: absolute;
+	top: 100%;
+	left: 0;
+	right: 0;
+	height: 2px;
+	background-image: url(../images/blue.png);
+	background-color: #53afbd;
+}
+.fixed-header .nav-header .block-inner:after {
+	display: none;
+}
+.header-bottom .nav-bottom {
+	position: relative;
+	height: 45px;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.header-bottom .nav-bottom-right {
+	position: absolute;
+	right: 0;
+	top: 2px;
+	bottom: 0;
+	line-height: 43px;
+	background-image: url(../images/blue.png);
+	background-color: #53afbd;
+	padding-left: 45px;
+	padding-right: 60px;
+	font-family: 'museo_sans_cyrl500';
+	font-size: 22px;
+	color: #fff;
+	z-index: 2;
+}
+.header-bottom .nav-bottom-left {
+	position: absolute;
+	left: 0;
+	top: 2px;
+	bottom: 0;
+	line-height: 43px;
+	background-image: url(../images/license.png);
+	background-position: 9px 50%;
+	background-repeat: no-repeat;
+	z-index: 1;
+	padding-left: 34px;
+	font-size: 12px;
+	font-family: 'open_sansbold';
+}
+.header-bottom .nav-bottom-left a {
+	color: #5b5b5b;
+}
+.header-bottom .nav-bottom-left a:hover {
+	color: #8cc642;
+}
+
+
+/* BANNER */
+.banner {
+	background-image: url(../images/banner.jpg);
+	background-position: 50% 50%;
+	z-index: 3;
+}
+.banner .block-inner {
+	height: 523px;
+}
+.banner .circles {
+	position: absolute;
+	right: 0;
+	width: 290px;
+	bottom: 15px;
+}
+.banner .line {
+	position: absolute;
+	right: 327px;
+	top: 0;
+	width: 1px;
+	bottom: 173px;
+	z-index: 5;
+}
+.banner .line:after {
+	content: '';
+	position: absolute;
+	width: 1px;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.15;
+}
+.banner .circle {
+	position: absolute;	
+	width: 11px;
+	height: 11px;
+	border-radius: 50%;
+	left: -5px;
+	top: -6px;
+	background-color: #fff;
+	border: 2px solid #8cc642;
+	z-index: 2;
+}
+.banner .circles .circle {
+	position: static;
+	display: inline-block;
+	margin-right: 14px;
+	cursor: pointer;
+}
+.banner .circles .circle.active {
+	background-color: #8cc642;
+	background-image: url(../images/green.png);
+}
+.banner .line .bottom-circle {
+	top: auto;
+	bottom: -4px;
+	width: 7px;
+	height: 7px;
+	left: -3px;
+	background-color: #8cc642;
+	background-image: url(../images/green.png);
+}
+.banner .info {
+	position: absolute;
+	right: 311px;
+	bottom: 15px;
+	width: 386px;
+	box-sizing: border-box;
+}
+.banner .info:before {
+	content: '';
+	position: absolute;
+	z-index: 1;
+	background-color: #fff;
+	opacity: 0.6;
+	width: 100%;
+	height: 100%;
+}
+.banner .info-content {
+	position: relative;
+	z-index: 2;
+	padding: 15px 30px;
+	font-size: 13px;
+	line-height: 16px;
+}
+.banner .form {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 290px;
+	padding-top: 15px;
+}
+.banner .form h2 {
+	color: #5b5b5b;
+	font-size: 26px;
+	font-family: 'museo_sans_cyrl500';
+	text-align: left;
+	margin-bottom: 20px;
+}
+.banner .form .inputs {
+	position: relative;
+	border: 1px solid #c7c7c7;
+	border-radius: 2px 2px 0 0;
+}
+.banner .form .inputs:before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.1;
+}
+.banner .form .inputs-inner {
+	position: relative;	
+	z-index: 2;
+}
+.banner .form .select {
+	height: 48px;
+	background-color: #fff;
+	border-radius: 2px 2px 0 0;
+	padding-left: 21px;
+	cursor: pointer;
+	position: relative;
+}
+.banner .form .select-value {
+	position: relative;
+	line-height: 50px;
+	font-family: 'OpenSans-Light';
+}
+.banner .form .select-value:after {
+	content: '';
+	position: absolute;
+	right: 18px;
+	top: 21px;
+	width: 16px;
+	height: 8px;
+	background-image: url(../images/select-arrow.png);
+}
+.banner .form .select-options {
+	display: none;
+	position: absolute;
+	top: 100%;
+	left: -1px;
+	right: -1px;
+	border: 1px solid #c7c7c7;
+	border-radius: 2px;
+}
+.banner .form .select-option {
+	line-height: 18px;
+	padding: 12px 20px;
+	background-color: #e7e7e7;
+	border-bottom: 1px solid #d9d9d9;
+}
+.banner .form .select-option:hover {
+	background-color: #d9d9d9;
+}
+.banner .form .select-option:last-child {
+	border-bottom: 0;
+}
+.banner .form .select:hover .select-options {
+	display: block;
+}
+.banner .form input[type="text"],
+.banner .form textarea {
+	width: 100%;
+	padding: 15px 18px;
+	font-family: 'OpenSans-Light';
+	color: #000;
+}
+.banner .form input[type="text"] {
+	border-bottom: 1px solid #e1e1e1;
+}
+.banner .form textarea {
+	resize: none;
+	height: 98px;
+}
+.banner .form input::-webkit-input-placeholder,
+.banner .form textarea::-webkit-input-placeholder {
+	color: #000;
+	transition: color 0.2s;
+	-moz-transition: color 0.2s;
+	-webkit-transition: color 0.2s;
+}
+.banner .form input::-moz-placeholder,
+.banner .form textarea::-moz-placeholder {
+	color: #000;
+	transition: color 0.2s;
+	-moz-transition: color 0.2s;
+	-webkit-transition: color 0.2s;
+}
+.banner .form input:focus::-webkit-input-placeholder,
+.banner .form textarea:focus::-webkit-input-placeholder {
+	color: #aaa;
+}
+.banner .form input:focus::-moz-placeholder,
+.banner .form textarea:focus::-moz-placeholder {
+	color: #aaa;
+}
+.banner .form input[type="submit"] {
+	height: 60px;
+	width: 100%;
+	background-color: #8cc642;
+	background-image: url(../images/green.png);
+	border-radius: 0 0 2px 2px;
+	color: #fff;
+	font-family: 'open_sansbold';
+	font-size: 14px;
+	margin-bottom: 18px;
+}
+.banner .form input[type="submit"]:hover {
+	background-image: url(../images/blue.png);
+	background-color: #53afbd;
+}
+.banner .form a.policy{
+	font-family: 'museo_sans_cyrl500';
+	color: #000;
+	font-size: 12px;
+}
+.banner .form a.policy:hover {
+	color: #8cc642;
 }
